# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  mise.toml  setup.cfg
.github/workflows/: pre-commit.yaml  release.yaml
hooks/: terramate_generate.sh
python_pre_commit_hooks/: enforce_conventional_commits.py
python_pre_commit_hooks/tests/: test_enforce_conventional_commits.py
shell/: terramate_fmt.sh
