[metadata]
name = pre_commit_hooks
version = 1.0.0
description = Some out-of-the-box hooks for pre-commit maintained by 'devops-roast'.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/devops-roast/pre-commit-hooks
author = DevOps Roast
author_email = support+github@devops-roast.com
license = Apache2

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    enforce-conventional-commits = python_pre_commit_hooks.enforce_conventional_commits:main

[bdist_wheel]
universal = True
